# ab-testing

./: README.md  pyproject.toml
ab_testing/: binom_dice_example.py  binom_dist.py  binomial_dist_sd.py  binomial_proportion_test_sim.py  clt_binom_dist.py  clt_exp_dist.py  distributions.ipynb  p_test.py  peeking_problem.py  peeking_temp.py  power_level.py  rosner.py  sandpit.py  simulating_binom_data.py  what_is_p_value.ipynb
ab_testing/.ipynb_checkpoints/: ab-testing-checkpoint.ipynb  ab-testing-test-checkpoint.ipynb
