[tool.poetry]
name = "ab-testing"
version = "0.1.0"
description = ""
authors = ["James McDonell"]
readme = "README.md"
packages = [{include = "ab_testing"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
ipywidgets = "^8.0.6"
seaborn = "^0.12.2"
jupyterlab = "^3.6.3"
statsmodels = "^0.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
